# nvit-vietnamese-command-assistant

./: .gitattributes  .gitignore  DECISIONS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: action_gate_cases.yaml  app.yaml  data_templates.yaml  intent_boundary_cases.yaml  intent_training.yaml  intents.yaml  regional_variants.yaml  semantic_intent_training.yaml  slot_values.yaml
data/: NATIVE_REVIEW_PROTOCOL.md  NORMALIZATION_SOURCES.md  README.md  SOURCES.md  action_safety_challenge.jsonl  fake_contacts.json  music_catalog.json  normalization_challenge.jsonl
data/raw_sources/: intent_hard_cases.jsonl
data/samples/: manifest.json  test_central.jsonl  test_north.jsonl  test_south.jsonl  test_standard.jsonl  train.jsonl  validation.jsonl
models/: intent_classifier.joblib  intent_classifier.metadata.json  intent_label_map.json  semantic_intent_classifier.joblib  slot_lexicon.json
reports/: action_safety_report.json  confidence_gate_report.json  data_validation_report.json  intent_training_report.json  model_comparison_report.json  normalization_audit.json  normalization_evaluation.json  preprocessing_report.json  semantic_intent_report.json  slot_extraction_report.json
scripts/: audit_normalization.py  augment_intent_hard_cases.py  build_dataset.py  build_slot_lexicon.py  evaluate.py  evaluate_action_safety.py  evaluate_confidence_gate.py  evaluate_normalizer.py  evaluate_slots.py  normalize_text.py  preprocess_dataset.py  run_assistant.py  train_intent.py  train_semantic_intent.py  validate_data.py
src/nvit_assistant/: __init__.py  api.py  cli.py  data_validation.py  dataset_builder.py  runtime.py  schemas.py
src/nvit_assistant/actions/: __init__.py  integrated_router.py  router.py
src/nvit_assistant/eval/: __init__.py  action_safety_evaluation.py  confidence_evaluation.py  final_evaluation.py  slot_evaluation.py
src/nvit_assistant/nlu/: __init__.py  action_gate.py  intent_classifier.py  normalization_evaluation.py  normalizer.py  pipeline.py  preprocessing.py  rule_intent_classifier.py  runtime_intent_classifier.py  semantic_intent_classifier.py  slot_extractor.py  slot_lexicon.py
tests/: test_action_gate.py  test_action_gate_cases.py  test_action_safety_evaluation.py  test_actions.py  test_api.py  test_artifact_consistency.py  test_cli.py  test_confidence_evaluation.py  test_data_validation.py  test_dataset_builder.py  test_end_to_end_commands.py  test_final_evaluation.py  test_integrated_actions.py  test_intent_boundary_cases.py  test_intent_classifier.py  test_nlu_pipeline.py  test_normalization_evaluation.py  test_normalizer.py  test_preprocessing.py  test_rule_intent_classifier.py  test_runtime.py  test_schemas.py  test_slot_evaluation.py  test_slot_extractor.py  test_slot_lexicon.py
