[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nvit-vietnamese-command-assistant"
version = "0.1.0"
description = "Vietnamese spoken-command understanding assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*", "torch", "torch.*"]
follow_imports = "skip"
