[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nvit-vietnamese-command-assistant"
version = "0.1.0"
description = "Vietnamese spoken-command understanding assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "numpy>=2.0.0,<2.5.0",
    "joblib>=1.4.0",
    "scikit-learn==1.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
nvit-assistant = "nvit_assistant.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
]
semantic = [
    "sentence-transformers>=5.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.8.0",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "joblib",
    "sklearn",
    "sklearn.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "torch",
    "torch.*",
]
follow_imports = "skip"
ignore_missing_imports = true
